--- a/app/src/main/res/layout/film_element.xml
+++ b/app/src/main/res/layout/film_element.xml
@@ -32,22 +32,24 @@
         android:id="@+id/photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:minHeight="200dp"
+        android:minWidth="200dp"
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <Button
         android:id="@+id/btnAddTitle"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:text="+"
-        android:background="@drawable/button_selector"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="70dp"
+        android:layout_marginEnd="67dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginEnd="65dp"
-        android:layout_below="@+id/photo"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="21dp" />
+        android:background="@drawable/button_selector"
+        android:text="+" />
 
 
 </RelativeLayout>
