--- a/app/src/main/res/layout/film_element.xml
+++ b/app/src/main/res/layout/film_element.xml
@@ -39,17 +39,26 @@
         app:srcCompat="@mipmap/ic_launcher" />
 
     <Button
-        android:id="@+id/btnAddTitle"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentBottom="true"
+        android:id="@+id/btnAddToWatch"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignBottom="@+id/photo"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="70dp"
-        android:layout_marginEnd="67dp"
+        android:layout_marginBottom="25dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/button_selector"
         android:text="+" />
+
+    <TextView
+        android:id="@+id/rating"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="TextView"
+        android:layout_alignTop="@+id/btnAddToWatch"
+        android:layout_toEndOf="@+id/photo"
+        android:layout_marginStart="30dp" />
 
 
 </RelativeLayout>
