--- a/app/src/main/res/layout/film_element.xml
+++ b/app/src/main/res/layout/film_element.xml
@@ -48,7 +48,10 @@
         android:background="@drawable/button_selector"
         android:text="+"
         android:layout_alignTop="@+id/rating"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:onClick="onClickHandler"/>
 
     <TextView
         android:id="@+id/rating"
