--- a/app/src/main/res/layout/activity_show_info_about_list_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_list_element.xml
@@ -8,17 +8,17 @@
 
     <ImageView
         android:id="@+id/poster"
-        android:layout_width="150dp"
-        android:layout_height="200dp"
+        android:layout_width="300dp"
+        android:layout_height="500dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_marginStart="22dp"
         android:layout_marginTop="68dp"
-        app:srcCompat="@color/colorPrimary"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        app:srcCompat="@color/colorPrimary" />
 
     <TextView
         android:id="@+id/Title"
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="false"
@@ -32,32 +32,33 @@
         android:id="@+id/Overview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_below="@+id/poster"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="54dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:text="Overview"
-        android:layout_alignTop="@+id/poster"
-        android:layout_toEndOf="@+id/poster"
-        android:layout_marginStart="15dp" />
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/add_button"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="100dp"
         android:text="+"
-        android:layout_below="@+id/Overview"
         android:background="@drawable/button_selector"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="13dp" />
+        android:layout_marginEnd="35dp"
+        android:layout_alignTop="@+id/poster"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:id="@+id/rating"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/add_button"
-        android:layout_alignBottom="@+id/add_button"
-        android:layout_alignStart="@+id/Overview"
-        android:text="rating" />
+        android:layout_height="50dp"
+        android:layout_alignTop="@+id/add_button"
+        android:layout_marginEnd="136dp"
+        android:layout_toStartOf="@+id/add_button"
+        android:text="rating"
+        android:textSize="36sp" />
 
 </RelativeLayout>
