--- a/app/src/main/res/layout/fragment_my_watch_list.xml
+++ b/app/src/main/res/layout/fragment_my_watch_list.xml
@@ -4,10 +4,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.simone.whatwatch.MyWatchListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <GridView
+        android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:gravity="center"
+        android:columnWidth="100dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="24dp"
+        android:horizontalSpacing="10dp"
+        android:stretchMode="spacingWidthUniform"
+        />
 </FrameLayout>
