--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,21 +1,43 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" >
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single"
+        android:id="@+id/typeGroup">
+        <item
+            android:title="Choose"
+            android:enabled="false"
+            android:checkable="false"
+            android:orderInCategory="0"/>
+
+        <item
+            android:id="@+id/Movies"
+            android:orderInCategory="1"
+            android:title="Movies"
+            app:showAsAction="never" />
+
+        <item
+            android:id="@+id/Tv_shows"
+            android:orderInCategory="2"
+            android:title="tv_shows"
+            app:showAsAction="never" />
+    </group>
+    <group android:checkableBehavior="single"
+        android:id="@+id/sortingGroup" >
         <item
             android:title="Sorting Options"
             android:enabled="false"
-            android:checkable="false" />
+            android:checkable="false"
+            android:orderInCategory="3"/>
 
         <item
             android:id="@+id/Popularity"
-            android:orderInCategory="100"
+            android:orderInCategory="4"
             android:title="Popularity"
             app:showAsAction="never" />
 
         <item
             android:id="@+id/Most_Voted"
-            android:orderInCategory="100"
+            android:orderInCategory="5"
             android:title="Most voted"
             app:showAsAction="never" />
 
