--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -18,7 +18,7 @@
         <item
             android:id="@+id/Tv_shows"
             android:orderInCategory="2"
-            android:title="tv_shows"
+            android:title="Tv shows"
             app:showAsAction="never" />
     </group>
     <group android:checkableBehavior="single"
