--- a/app/src/main/res/drawable/button_selector.xml
+++ b/app/src/main/res/drawable/button_selector.xml
@@ -1,23 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" >
-        <shape android:shape="oval"  >
-
-            <stroke android:width="1dip" android:color="@color/green_temp" />
-            <gradient android:angle="-90" android:startColor="@color/green_temp" android:endColor="@color/green_temp"  />
-        </shape>
-    </item>
-    <item android:state_focused="true">
-        <shape android:shape="oval"  >
-
-            <stroke android:width="1dip" android:color="#25ee64" />
-            <solid android:color="#25ee64"/>
-        </shape>
-    </item>
     <item >
         <shape android:shape="oval"  >
-            <stroke android:width="1dip" android:color="#25ee64" />
-            <gradient android:angle="-90" android:startColor="#25ee64" android:endColor="#25ee64" />
+            <stroke android:width="1dip" android:color="#1ab14a" />
+            <gradient android:angle="-90" android:startColor="#1ab14a" android:endColor="#1ab14a" />
         </shape>
     </item>
 </selector>
