--- a/app/src/main/res/layout/film_element.xml
+++ b/app/src/main/res/layout/film_element.xml
@@ -23,8 +23,8 @@
         android:paddingBottom="2dip"
         android:paddingTop="6dip"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp"
+        android:textColor="@color/WhiteSmoke"
+        android:textSize="30sp"
         android:textStyle="bold"
         tools:ignore="InefficientWeight" />
 
@@ -32,35 +32,58 @@
         android:id="@+id/photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:minHeight="200dp"
         android:minWidth="200dp"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/btnAddToWatch"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="34dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/button_selector"
         android:text="+"
-        android:layout_alignTop="@+id/rating"
-        android:layout_alignParentEnd="true"
         android:focusable="false"
-        android:focusableInTouchMode="false"/>
+        android:focusableInTouchMode="false"
+        android:layout_marginStart="28dp"
+        android:layout_above="@+id/button2"
+        android:layout_toEndOf="@+id/button2" />
 
     <TextView
         android:id="@+id/rating"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
+        android:layout_marginStart="63dp"
+        android:layout_marginTop="37dp"
         android:text="TextView"
-        android:layout_marginStart="29dp"
+        android:textSize="36sp"
         android:layout_below="@+id/Title"
-        android:layout_toEndOf="@+id/photo"
-        android:layout_marginTop="37dp" />
+        android:layout_toEndOf="@+id/photo" />
+
+    <TextView
+        android:id="@+id/scale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/rating"
+        android:layout_alignTop="@+id/rating"
+        android:layout_toEndOf="@+id/rating"
+        android:text="/10"
+        android:textColor="@color/White"
+        android:textSize="36sp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/scale"
+        android:layout_marginStart="28dp"
+        android:layout_toEndOf="@+id/scale"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:text="Partecipa alla chat" />
 
 
 </RelativeLayout>
