--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,7 +26,7 @@
     <color name="navy">#000080</color>
     <color name="black">#000000</color>
 
-    <color name="White">#FFFFFF</color>
+    <color name="White">#ffffff</color>
     <color name="Ivory">#FFFFF0</color>
     <color name="LightYellow">#FFFFE0</color>
     <color name="Yellow">#FFFF00</color>
@@ -64,7 +64,7 @@
     <color name="Salmon">#FA8072</color>
     <color name="GhostWhite">#F8F8FF</color>
     <color name="MintCream">#F5FFFA</color>
-    <color name="WhiteSmoke">#F5F5F5</color>
+    <color name="WhiteSmoke">#f5f5f5</color>
     <color name="Beige">#F5F5DC</color>
     <color name="Wheat">#F5DEB3</color>
     <color name="SandyBrown">#F4A460</color>
