--- a/app/src/main/res/layout/activity_show_info_about_tv_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_tv_element.xml
@@ -62,4 +62,12 @@
         android:text="rating"
         android:textSize="36sp" />
 
+    <ListView
+        android:id="@+id/season_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/Overview"
+        android:layout_marginTop="68dp" />
+
 </RelativeLayout>
