--- a/app/src/main/res/layout/activity_show_info_about_list_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_list_element.xml
@@ -12,8 +12,9 @@
         android:layout_height="500dp"
         android:layout_marginStart="23dp"
         app:srcCompat="@color/colorPrimary"
-        android:layout_below="@+id/Title"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/director"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp" />
 
     <TextView
         android:id="@+id/Title"
