--- a/app/src/main/res/layout/activity_show_info_about_tv_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_tv_element.xml
@@ -8,6 +8,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/Really_Really_Dark_Gray"
         tools:context="com.example.simone.whatwatch.ShowInfoAboutListElement">
 
         <ImageView
