--- a/app/src/main/res/layout/activity_show_info_about_list_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_list_element.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Really_Really_Dark_Gray"
     android:paddingBottom="20dp">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -32,6 +33,7 @@
             android:layout_marginTop="32dp"
             android:text="Titolo"
             android:textAlignment="center"
+            android:textColor="@color/WhiteSmoke"
             android:textSize="30sp" />
 
         <TextView
@@ -42,6 +44,7 @@
             android:layout_below="@+id/genres"
             android:layout_marginTop="33dp"
             android:text="Overview"
+            android:textColor="@color/WhiteSmoke"
             android:textSize="18sp" />
 
         <Button
@@ -74,6 +77,7 @@
             android:layout_alignBottom="@+id/rating"
             android:layout_alignStart="@+id/youtube"
             android:text="TextView"
+            android:textColor="@color/WhiteSmoke"
             android:textSize="36sp" />
 
         <TextView
@@ -83,6 +87,7 @@
             android:layout_alignStart="@+id/poster"
             android:layout_below="@+id/poster"
             android:text="TextView"
+            android:textColor="@color/WhiteSmoke"
             android:textSize="14sp" />
 
         <TextView
@@ -93,7 +98,8 @@
             android:layout_alignStart="@+id/Overview"
             android:layout_below="@+id/Overview"
             android:layout_marginTop="33dp"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/WhiteSmoke" />
 
         <TextView
             android:id="@+id/runtime"
@@ -103,6 +109,7 @@
             android:layout_marginStart="24dp"
             android:layout_toEndOf="@+id/year"
             android:text="textView"
+            android:textColor="@color/WhiteSmoke"
             android:textSize="36sp" />
 
         <TextView
@@ -113,7 +120,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="12dp"
             android:text="TextView"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@color/WhiteSmoke" />
 
         <CheckBox
             android:id="@+id/seen"
@@ -122,7 +130,8 @@
             android:layout_alignBottom="@+id/add_button"
             android:layout_alignEnd="@+id/add_button"
             android:layout_marginBottom="80dp"
-            android:text="Seen" />
+            android:text="Seen"
+            android:textColor="@color/WhiteSmoke" />
 
         <Button
             android:id="@+id/youtube"
@@ -133,6 +142,16 @@
             android:layout_marginTop="21dp"
             android:layout_toEndOf="@+id/director"
             android:text="Go to youtube" />
+
+        <TextView
+            android:id="@+id/scale"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_alignBottom="@+id/rating"
+            android:layout_toEndOf="@+id/rating"
+            android:text="/10"
+            android:textColor="@color/WhiteSmoke"
+            android:textSize="36sp" />
 
     </RelativeLayout>
 </ScrollView>
