--- a/app/src/main/res/layout/film_element.xml
+++ b/app/src/main/res/layout/film_element.xml
@@ -43,9 +43,6 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_above="@+id/button2"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginStart="28dp"
         android:layout_toEndOf="@+id/button2"
         android:background="@drawable/button_selector"
         android:focusable="false"
@@ -79,12 +76,11 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/scale"
-        android:layout_marginStart="28dp"
-        android:layout_toEndOf="@+id/scale"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:text="Partecipa alla chat" />
+        android:text="Partecipa alla chat"
+        android:layout_below="@+id/scale"
+        android:layout_toEndOf="@+id/scale" />
 
 
 </RelativeLayout>
